# workspace5_5_12feb

.metadata/: version.ini
basic/: .cproject  .project
cam_test/: .cproject  .project
detection_code_30jan/: .project  partitions.csv
detection_code_30jan/main/: dvp_spi_lcd_main.c
detection_code_30jan/scripts/: dump.txt  dump1.txt  test_view1.pgm
detection_code_30jan/tflm_scripts/: dump.txt  model.tflite  monitor_logs.txt  prepare_data.py
dvp_spi_lcd/: .project
dvp_spi_lcd_24jan/: .cproject  .project
dvp_spi_lcd_24jan/main/: dvp_spi_lcd_main.c
dvp_spi_lcd_24jan/scripts/: New Text Document.txt  dump1.txt  dump2.txt  dump3.txt  hex_to_pgm1 - Copy.py  hex_to_pgm2.py  script_instructions.txt  test_view.pgm  test_view1.pgm  test_view2.pgm
dvp_spi_lcd_24jan_v1/: .cproject  .project
dvp_spi_lcd_24jan_v1/main/: CMakeLists.txt  (+1 more)
dvp_spi_lcd_28jan_v0/: .project  partitions - Copy.csv
dvp_spi_lcd_v1/: .cproject  .project
hitachi_adapter/: .cproject  .project
inference_code_30jan/: .project
inference_code_30jan/main/: CMakeLists.txt  dvp_spi_lcd_main.c  model_data.cc  model_data.h  model_inference.cc  model_inference.h
mb_tcp_master_4feb/: .cproject  .project
mb_tcp_master_5feb/: .project  Site Commissioning Cheat Sheet
mb_tcp_master_5febv2/: .project
mb_tcp_master_6feb(final)/: .project  modbus_slave.py
mb_tcp_master_6feb(final)_ethernett1/: .cproject  .project
mb_tcp_master_6feb_wifi/: .project
mb_tcp_master_ethernet_final_11feb/: .cproject  .project
mb_tcp_master_wifi7jan/: .project
mb_tcp_master_wifi_9feb(final)/: .cproject  .project
(+320 files in other folders)
